{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 246,
  "lineage": "eb42f217-8b6b-14fb-67af-9ee7a95ebded",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "tgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:us-west-2:535928845597:transit-gateway/tgw-051c83c4cd925d1ff",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "disable",
            "default_route_table_propagation": "disable",
            "description": "tgw",
            "dns_support": "enable",
            "id": "tgw-051c83c4cd925d1ff",
            "multicast_support": "disable",
            "owner_id": "535928845597",
            "tags": {
              "Name": "tgw"
            },
            "tags_all": {
              "Name": "tgw"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "tgw_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:535928845597:transit-gateway-route-table/tgw-rtb-0294a610a3db45dff",
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-0294a610a3db45dff",
            "tags": {
              "Name": "tgw-route-table-0"
            },
            "tags_all": {
              "Name": "tgw-route-table-0"
            },
            "transit_gateway_id": "tgw-051c83c4cd925d1ff"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:535928845597:transit-gateway-route-table/tgw-rtb-03ead0edf618dad26",
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-03ead0edf618dad26",
            "tags": {
              "Name": "tgw-route-table-1"
            },
            "tags_all": {
              "Name": "tgw-route-table-1"
            },
            "transit_gateway_id": "tgw-051c83c4cd925d1ff"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "tgw_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-0294a610a3db45dff_tgw-attach-0db877c587702b61a",
            "replace_existing_association": false,
            "resource_id": "vpc-08d62d56c5f3ec630",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0db877c587702b61a",
            "transit_gateway_route_table_id": "tgw-rtb-0294a610a3db45dff"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_ec2_transit_gateway_route_table.tgw_route_table",
            "aws_ec2_transit_gateway_vpc_attachment.vpc_attachment",
            "aws_key_pair.ssh_key",
            "module.vpcs.aws_instance.subnet_instance",
            "module.vpcs.aws_security_group.ssh_sg",
            "module.vpcs.aws_subnet.subnet",
            "module.vpcs.aws_vpc.vpc",
            "module.vpcs.data.aws_ami.amazon_linux",
            "module.vpcs.data.aws_availability_zones.available",
            "tls_private_key.ssh_key"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-03ead0edf618dad26_tgw-attach-0fb9df2d53e39c6ea",
            "replace_existing_association": false,
            "resource_id": "vpc-03d6b7559ed48988a",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0fb9df2d53e39c6ea",
            "transit_gateway_route_table_id": "tgw-rtb-03ead0edf618dad26"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_ec2_transit_gateway_route_table.tgw_route_table",
            "aws_ec2_transit_gateway_vpc_attachment.vpc_attachment",
            "aws_key_pair.ssh_key",
            "module.vpcs.aws_instance.subnet_instance",
            "module.vpcs.aws_security_group.ssh_sg",
            "module.vpcs.aws_subnet.subnet",
            "module.vpcs.aws_vpc.vpc",
            "module.vpcs.data.aws_ami.amazon_linux",
            "module.vpcs.data.aws_availability_zones.available",
            "tls_private_key.ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "vpc_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0db877c587702b61a",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-072d58ff3f27c0ea7",
              "subnet-0c6359c5406ec09b6"
            ],
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-051c83c4cd925d1ff",
            "vpc_id": "vpc-08d62d56c5f3ec630",
            "vpc_owner_id": "535928845597"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_key_pair.ssh_key",
            "module.vpcs.aws_instance.subnet_instance",
            "module.vpcs.aws_security_group.ssh_sg",
            "module.vpcs.aws_subnet.subnet",
            "module.vpcs.aws_vpc.vpc",
            "module.vpcs.data.aws_ami.amazon_linux",
            "module.vpcs.data.aws_availability_zones.available",
            "tls_private_key.ssh_key"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0fb9df2d53e39c6ea",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-005530fb58c39213a",
              "subnet-0738b442180d279af"
            ],
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-051c83c4cd925d1ff",
            "vpc_id": "vpc-03d6b7559ed48988a",
            "vpc_owner_id": "535928845597"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_key_pair.ssh_key",
            "module.vpcs.aws_instance.subnet_instance",
            "module.vpcs.aws_security_group.ssh_sg",
            "module.vpcs.aws_subnet.subnet",
            "module.vpcs.aws_vpc.vpc",
            "module.vpcs.data.aws_ami.amazon_linux",
            "module.vpcs.data.aws_availability_zones.available",
            "tls_private_key.ssh_key"
          ]
        }
      ]
    },
    {
      "module": "module.security_vpc",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgw_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-02fb68d136931e4a8",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-048f698f89d48ebd5",
              "subnet-077ab118678059ebe"
            ],
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-051c83c4cd925d1ff",
            "vpc_id": "vpc-0676eb1eb96d963c0",
            "vpc_owner_id": "535928845597"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "module.security_vpc.aws_subnet.subnet",
            "module.security_vpc.aws_vpc.vpc",
            "module.security_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.security_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f26e7b2e45241c77",
            "association_id": "eipassoc-00f1e4b32ff4e7579",
            "domain": "vpc",
            "id": "eipalloc-0f26e7b2e45241c77",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0674ac285c850f89a",
            "private_dns": "ip-10-1-48-76.us-west-2.compute.internal",
            "private_ip": "10.1.48.76",
            "public_dns": "ec2-54-69-248-252.us-west-2.compute.amazonaws.com",
            "public_ip": "54.69.248.252",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.security_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-054f459b1982b2a12",
            "association_id": "eipassoc-002005c07ef1ec474",
            "domain": "vpc",
            "id": "eipalloc-054f459b1982b2a12",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0121c545a32bc6634",
            "private_dns": "ip-10-1-48-87.us-west-2.compute.internal",
            "private_ip": "10.1.48.87",
            "public_dns": "ec2-34-209-108-123.us-west-2.compute.amazonaws.com",
            "public_ip": "34.209.108.123",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.security_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.security_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "palo_alto_mgmt_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0498f6d3b349c9a21",
            "association_id": "eipassoc-0a2eaa27ee44b70dd",
            "domain": "vpc",
            "id": "eipalloc-0498f6d3b349c9a21",
            "instance": "i-093f4ef9b0503a802",
            "network_border_group": "us-west-2",
            "network_interface": "eni-043bcbcb51499226f",
            "private_dns": "ip-10-1-48-8.us-west-2.compute.internal",
            "private_ip": "10.1.48.8",
            "public_dns": "ec2-34-218-102-40.us-west-2.compute.amazonaws.com",
            "public_ip": "34.218.102.40",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "palo-alto-fw-mgmt-eip-1"
            },
            "tags_all": {
              "Name": "palo-alto-fw-mgmt-eip-1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_key_pair.ssh_key",
            "module.security_vpc.aws_instance.palo_alto_fw",
            "module.security_vpc.aws_network_interface.palo_alto_primary_eni",
            "module.security_vpc.aws_network_interface.palo_alto_secondary_eni",
            "module.security_vpc.aws_security_group.palo_alto_mgmt_sg",
            "module.security_vpc.aws_subnet.subnet",
            "module.security_vpc.aws_vpc.vpc",
            "module.security_vpc.data.aws_ami.palo_alto_fw",
            "module.security_vpc.data.aws_availability_zones.available",
            "random_string.my_secret",
            "tls_private_key.ssh_key"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fe0eba6bb4b97341",
            "association_id": "eipassoc-0e5d779caad820af7",
            "domain": "vpc",
            "id": "eipalloc-0fe0eba6bb4b97341",
            "instance": "i-0d94743d074a5a4b7",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0bf11929caabfd303",
            "private_dns": "ip-10-1-48-20.us-west-2.compute.internal",
            "private_ip": "10.1.48.20",
            "public_dns": "ec2-54-201-230-51.us-west-2.compute.amazonaws.com",
            "public_ip": "54.201.230.51",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "palo-alto-fw-mgmt-eip-2"
            },
            "tags_all": {
              "Name": "palo-alto-fw-mgmt-eip-2"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_key_pair.ssh_key",
            "module.security_vpc.aws_instance.palo_alto_fw",
            "module.security_vpc.aws_network_interface.palo_alto_primary_eni",
            "module.security_vpc.aws_network_interface.palo_alto_secondary_eni",
            "module.security_vpc.aws_security_group.palo_alto_mgmt_sg",
            "module.security_vpc.aws_subnet.subnet",
            "module.security_vpc.aws_vpc.vpc",
            "module.security_vpc.data.aws_ami.palo_alto_fw",
            "module.security_vpc.data.aws_availability_zones.available",
            "random_string.my_secret",
            "tls_private_key.ssh_key"
          ]
        }
      ]
    },
    {
      "module": "module.security_vpc",
      "mode": "managed",
      "type": "aws_instance",
      "name": "palo_alto_fw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-014b37d6e4743d434",
            "arn": "arn:aws:ec2:us-west-2:535928845597:instance/i-093f4ef9b0503a802",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-093f4ef9b0503a802",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.xlarge",
            "ipv6_address_count": 1,
            "ipv6_addresses": [
              "2600:1f14:3f59:7d00:826b:93cf:1a3d:cf51"
            ],
            "key_name": "my_ssh_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-043bcbcb51499226f"
              },
              {
                "delete_on_termination": false,
                "device_index": 1,
                "network_card_index": 0,
                "network_interface_id": "eni-00d165a9845982cfb"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-043bcbcb51499226f",
            "private_dns": "ip-10-1-48-8.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.48.8",
            "public_dns": "ec2-34-218-102-40.us-west-2.compute.amazonaws.com",
            "public_ip": "34.218.102.40",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 180,
                "throughput": 0,
                "volume_id": "vol-0e3bd0c124c9e2a54",
                "volume_size": 60,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-025145aab2de5ae38",
            "tags": {
              "Name": "palo-alto-fw-1"
            },
            "tags_all": {
              "Name": "palo-alto-fw-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-068d2eed5edc244dc"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh_key",
            "module.security_vpc.aws_network_interface.palo_alto_primary_eni",
            "module.security_vpc.aws_network_interface.palo_alto_secondary_eni",
            "module.security_vpc.aws_security_group.palo_alto_mgmt_sg",
            "module.security_vpc.aws_subnet.subnet",
            "module.security_vpc.aws_vpc.vpc",
            "module.security_vpc.data.aws_ami.palo_alto_fw",
            "module.security_vpc.data.aws_availability_zones.available",
            "random_string.my_secret",
            "tls_private_key.ssh_key"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-014b37d6e4743d434",
            "arn": "arn:aws:ec2:us-west-2:535928845597:instance/i-0d94743d074a5a4b7",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d94743d074a5a4b7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.xlarge",
            "ipv6_address_count": 1,
            "ipv6_addresses": [
              "2600:1f14:3f59:7d01:21c2:b52e:24d8:99ff"
            ],
            "key_name": "my_ssh_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0bf11929caabfd303"
              },
              {
                "delete_on_termination": false,
                "device_index": 1,
                "network_card_index": 0,
                "network_interface_id": "eni-0cc7a14cfd9c3fc02"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bf11929caabfd303",
            "private_dns": "ip-10-1-48-20.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.48.20",
            "public_dns": "ec2-54-201-230-51.us-west-2.compute.amazonaws.com",
            "public_ip": "54.201.230.51",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 180,
                "throughput": 0,
                "volume_id": "vol-0f72dc81aef92a07c",
                "volume_size": 60,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-011041fe853bda575",
            "tags": {
              "Name": "palo-alto-fw-2"
            },
            "tags_all": {
              "Name": "palo-alto-fw-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-068d2eed5edc244dc"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh_key",
            "module.security_vpc.aws_network_interface.palo_alto_primary_eni",
            "module.security_vpc.aws_network_interface.palo_alto_secondary_eni",
            "module.security_vpc.aws_security_group.palo_alto_mgmt_sg",
            "module.security_vpc.aws_subnet.subnet",
            "module.security_vpc.aws_vpc.vpc",
            "module.security_vpc.data.aws_ami.palo_alto_fw",
            "module.security_vpc.data.aws_availability_zones.available",
            "random_string.my_secret",
            "tls_private_key.ssh_key"
          ]
        }
      ]
    },
    {
      "module": "module.security_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:535928845597:internet-gateway/igw-0a149b4c2503717f2",
            "id": "igw-0a149b4c2503717f2",
            "owner_id": "535928845597",
            "tags": {
              "Name": "security-vpc-igw"
            },
            "tags_all": {
              "Name": "security-vpc-igw"
            },
            "vpc_id": "vpc-0676eb1eb96d963c0"
          },
          "dependencies": [
            "module.security_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_vpc",
      "mode": "managed",
      "type": "aws_lb",
      "name": "gwlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:535928845597:loadbalancer/gwy/security-vpc-gwlb/f22be71654b0ab72",
            "arn_suffix": "gwy/security-vpc-gwlb/f22be71654b0ab72",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:535928845597:loadbalancer/gwy/security-vpc-gwlb/f22be71654b0ab72",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "gateway",
            "name": "security-vpc-gwlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-011041fe853bda575"
              },
              {
                "subnet_id": "subnet-025145aab2de5ae38"
              }
            ],
            "subnets": [
              "subnet-011041fe853bda575",
              "subnet-025145aab2de5ae38"
            ],
            "tags": {
              "Name": "security-vpc-gwlb"
            },
            "tags_all": {
              "Name": "security-vpc-gwlb"
            },
            "vpc_id": "vpc-0676eb1eb96d963c0"
          },
          "dependencies": [
            "module.security_vpc.aws_subnet.subnet",
            "module.security_vpc.aws_vpc.vpc",
            "module.security_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.security_vpc",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "gwlb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:535928845597:targetgroup/security-vpc-gwlb-tg/0083e4110cca7e7a48",
            "arn_suffix": "targetgroup/security-vpc-gwlb-tg/0083e4110cca7e7a48",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:535928845597:targetgroup/security-vpc-gwlb-tg/0083e4110cca7e7a48",
            "lambda_multi_value_headers_enabled": false,
            "name": "security-vpc-gwlb-tg",
            "port": 6081,
            "protocol": "GENEVE",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip_dest_ip_proto"
              }
            ],
            "target_failover": [
              {
                "on_deregistration": "no_rebalance",
                "on_unhealthy": "no_rebalance"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0676eb1eb96d963c0"
          },
          "dependencies": [
            "module.security_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_vpc",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "gwlb_tg_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:535928845597:targetgroup/security-vpc-gwlb-tg/0083e4110cca7e7a48-20231017150942599300000014",
            "port": 6081,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:535928845597:targetgroup/security-vpc-gwlb-tg/0083e4110cca7e7a48",
            "target_id": "i-093f4ef9b0503a802"
          },
          "dependencies": [
            "aws_key_pair.ssh_key",
            "module.security_vpc.aws_instance.palo_alto_fw",
            "module.security_vpc.aws_lb_target_group.gwlb_tg",
            "module.security_vpc.aws_network_interface.palo_alto_primary_eni",
            "module.security_vpc.aws_network_interface.palo_alto_secondary_eni",
            "module.security_vpc.aws_security_group.palo_alto_mgmt_sg",
            "module.security_vpc.aws_subnet.subnet",
            "module.security_vpc.aws_vpc.vpc",
            "module.security_vpc.data.aws_ami.palo_alto_fw",
            "module.security_vpc.data.aws_availability_zones.available",
            "random_string.my_secret",
            "tls_private_key.ssh_key"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:535928845597:targetgroup/security-vpc-gwlb-tg/0083e4110cca7e7a48-20231017150942346100000013",
            "port": 6081,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:535928845597:targetgroup/security-vpc-gwlb-tg/0083e4110cca7e7a48",
            "target_id": "i-0d94743d074a5a4b7"
          },
          "dependencies": [
            "aws_key_pair.ssh_key",
            "module.security_vpc.aws_instance.palo_alto_fw",
            "module.security_vpc.aws_lb_target_group.gwlb_tg",
            "module.security_vpc.aws_network_interface.palo_alto_primary_eni",
            "module.security_vpc.aws_network_interface.palo_alto_secondary_eni",
            "module.security_vpc.aws_security_group.palo_alto_mgmt_sg",
            "module.security_vpc.aws_subnet.subnet",
            "module.security_vpc.aws_vpc.vpc",
            "module.security_vpc.data.aws_ami.palo_alto_fw",
            "module.security_vpc.data.aws_availability_zones.available",
            "random_string.my_secret",
            "tls_private_key.ssh_key"
          ]
        }
      ]
    },
    {
      "module": "module.security_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f26e7b2e45241c77",
            "association_id": "eipassoc-00f1e4b32ff4e7579",
            "connectivity_type": "public",
            "id": "nat-0b72b37c0536d0698",
            "network_interface_id": "eni-0674ac285c850f89a",
            "private_ip": "10.1.48.76",
            "public_ip": "54.69.248.252",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05ec38b9ba30cbda9"
          },
          "dependencies": [
            "module.security_vpc.aws_eip.nat_eip",
            "module.security_vpc.aws_subnet.subnet",
            "module.security_vpc.aws_vpc.vpc",
            "module.security_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-054f459b1982b2a12",
            "association_id": "eipassoc-002005c07ef1ec474",
            "connectivity_type": "public",
            "id": "nat-06b795959ac52c20c",
            "network_interface_id": "eni-0121c545a32bc6634",
            "private_ip": "10.1.48.87",
            "public_ip": "34.209.108.123",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08cf4b617bd5077e1"
          },
          "dependencies": [
            "module.security_vpc.aws_eip.nat_eip",
            "module.security_vpc.aws_subnet.subnet",
            "module.security_vpc.aws_vpc.vpc",
            "module.security_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.security_vpc",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "palo_alto_primary_eni",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:535928845597:network-interface/eni-043bcbcb51499226f",
            "attachment": [
              {
                "attachment_id": "eni-attach-0b47da1f7a2d576dd",
                "device_index": 0,
                "instance": "i-093f4ef9b0503a802"
              }
            ],
            "id": "eni-043bcbcb51499226f",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 1,
            "ipv6_address_list": [
              "2600:1f14:3f59:7d00:826b:93cf:1a3d:cf51"
            ],
            "ipv6_address_list_enabled": false,
            "ipv6_addresses": [
              "2600:1f14:3f59:7d00:826b:93cf:1a3d:cf51"
            ],
            "ipv6_prefix_count": 0,
            "mac_address": "06:36:fc:04:7c:29",
            "owner_id": "535928845597",
            "private_dns_name": "ip-10-1-48-8.us-west-2.compute.internal",
            "private_ip": "10.1.48.8",
            "private_ip_list": [
              "10.1.48.8"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.1.48.8"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-068d2eed5edc244dc"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-025145aab2de5ae38",
            "tags": {
              "Name": "palo-alto-fw-primary-eni-1"
            },
            "tags_all": {
              "Name": "palo-alto-fw-primary-eni-1"
            }
          },
          "dependencies": [
            "module.security_vpc.aws_security_group.palo_alto_mgmt_sg",
            "module.security_vpc.aws_subnet.subnet",
            "module.security_vpc.aws_vpc.vpc",
            "module.security_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:535928845597:network-interface/eni-0bf11929caabfd303",
            "attachment": [
              {
                "attachment_id": "eni-attach-0b6342c90394e8266",
                "device_index": 0,
                "instance": "i-0d94743d074a5a4b7"
              }
            ],
            "id": "eni-0bf11929caabfd303",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 1,
            "ipv6_address_list": [
              "2600:1f14:3f59:7d01:21c2:b52e:24d8:99ff"
            ],
            "ipv6_address_list_enabled": false,
            "ipv6_addresses": [
              "2600:1f14:3f59:7d01:21c2:b52e:24d8:99ff"
            ],
            "ipv6_prefix_count": 0,
            "mac_address": "02:c8:d7:76:01:95",
            "owner_id": "535928845597",
            "private_dns_name": "ip-10-1-48-20.us-west-2.compute.internal",
            "private_ip": "10.1.48.20",
            "private_ip_list": [
              "10.1.48.20"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.1.48.20"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-068d2eed5edc244dc"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-011041fe853bda575",
            "tags": {
              "Name": "palo-alto-fw-primary-eni-2"
            },
            "tags_all": {
              "Name": "palo-alto-fw-primary-eni-2"
            }
          },
          "dependencies": [
            "module.security_vpc.aws_security_group.palo_alto_mgmt_sg",
            "module.security_vpc.aws_subnet.subnet",
            "module.security_vpc.aws_vpc.vpc",
            "module.security_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.security_vpc",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "palo_alto_secondary_eni",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:535928845597:network-interface/eni-00d165a9845982cfb",
            "attachment": [
              {
                "attachment_id": "eni-attach-0fffae0909d270e46",
                "device_index": 1,
                "instance": "i-093f4ef9b0503a802"
              }
            ],
            "id": "eni-00d165a9845982cfb",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 1,
            "ipv6_address_list": [
              "2600:1f14:3f59:7d02:fdb7:cea6:869a:3043"
            ],
            "ipv6_address_list_enabled": false,
            "ipv6_addresses": [
              "2600:1f14:3f59:7d02:fdb7:cea6:869a:3043"
            ],
            "ipv6_prefix_count": 0,
            "mac_address": "06:f4:c2:f9:46:2f",
            "owner_id": "535928845597",
            "private_dns_name": "ip-10-1-48-38.us-west-2.compute.internal",
            "private_ip": "10.1.48.38",
            "private_ip_list": [
              "10.1.48.38"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.1.48.38"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0aec04deccca50d8d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0353e6089fabb01f5",
            "tags": {
              "Name": "palo-alto-fw-secondary-eni-1"
            },
            "tags_all": {
              "Name": "palo-alto-fw-secondary-eni-1"
            }
          },
          "dependencies": [
            "module.security_vpc.aws_subnet.subnet",
            "module.security_vpc.aws_vpc.vpc",
            "module.security_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:535928845597:network-interface/eni-0cc7a14cfd9c3fc02",
            "attachment": [
              {
                "attachment_id": "eni-attach-02168a4bf6e9432dc",
                "device_index": 1,
                "instance": "i-0d94743d074a5a4b7"
              }
            ],
            "id": "eni-0cc7a14cfd9c3fc02",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 1,
            "ipv6_address_list": [
              "2600:1f14:3f59:7d03:ea2e:b12a:83f0:3442"
            ],
            "ipv6_address_list_enabled": false,
            "ipv6_addresses": [
              "2600:1f14:3f59:7d03:ea2e:b12a:83f0:3442"
            ],
            "ipv6_prefix_count": 0,
            "mac_address": "02:4c:0f:0e:4c:d3",
            "owner_id": "535928845597",
            "private_dns_name": "ip-10-1-48-61.us-west-2.compute.internal",
            "private_ip": "10.1.48.61",
            "private_ip_list": [
              "10.1.48.61"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.1.48.61"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0aec04deccca50d8d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f55e2220809614bf",
            "tags": {
              "Name": "palo-alto-fw-secondary-eni-2"
            },
            "tags_all": {
              "Name": "palo-alto-fw-secondary-eni-2"
            }
          },
          "dependencies": [
            "module.security_vpc.aws_subnet.subnet",
            "module.security_vpc.aws_vpc.vpc",
            "module.security_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.security_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0802c5ba36374cd751080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b72b37c0536d0698",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0802c5ba36374cd75",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_vpc.aws_eip.nat_eip",
            "module.security_vpc.aws_nat_gateway.nat_gw",
            "module.security_vpc.aws_route_table.nat_route_table",
            "module.security_vpc.aws_subnet.subnet",
            "module.security_vpc.aws_vpc.vpc",
            "module.security_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-003be8ea09c352e3c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06b795959ac52c20c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-003be8ea09c352e3c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_vpc.aws_eip.nat_eip",
            "module.security_vpc.aws_nat_gateway.nat_gw",
            "module.security_vpc.aws_route_table.nat_route_table",
            "module.security_vpc.aws_subnet.subnet",
            "module.security_vpc.aws_vpc.vpc",
            "module.security_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.security_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:535928845597:route-table/rtb-0802c5ba36374cd75",
            "id": "rtb-0802c5ba36374cd75",
            "owner_id": "535928845597",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b72b37c0536d0698",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0676eb1eb96d963c0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_vpc.aws_vpc.vpc",
            "module.security_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:535928845597:route-table/rtb-003be8ea09c352e3c",
            "id": "rtb-003be8ea09c352e3c",
            "owner_id": "535928845597",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06b795959ac52c20c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0676eb1eb96d963c0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_vpc.aws_vpc.vpc",
            "module.security_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.security_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:535928845597:route-table/rtb-0144dc2d9572e9acc",
            "id": "rtb-0144dc2d9572e9acc",
            "owner_id": "535928845597",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a149b4c2503717f2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "security-vpc-public-rt"
            },
            "tags_all": {
              "Name": "security-vpc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0676eb1eb96d963c0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_vpc.aws_internet_gateway.igw",
            "module.security_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe3677c39a48e905",
            "route_table_id": "rtb-0802c5ba36374cd75",
            "subnet_id": "subnet-011041fe853bda575"
          },
          "dependencies": [
            "module.security_vpc.aws_route_table.nat_route_table",
            "module.security_vpc.aws_subnet.subnet",
            "module.security_vpc.aws_vpc.vpc",
            "module.security_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7dcac59ab62d344",
            "route_table_id": "rtb-003be8ea09c352e3c",
            "subnet_id": "subnet-0f55e2220809614bf"
          },
          "dependencies": [
            "module.security_vpc.aws_route_table.nat_route_table",
            "module.security_vpc.aws_subnet.subnet",
            "module.security_vpc.aws_vpc.vpc",
            "module.security_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.security_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0269c9068c8ed6fed",
            "route_table_id": "rtb-0144dc2d9572e9acc",
            "subnet_id": "subnet-025145aab2de5ae38"
          },
          "dependencies": [
            "module.security_vpc.aws_internet_gateway.igw",
            "module.security_vpc.aws_route_table.public",
            "module.security_vpc.aws_subnet.subnet",
            "module.security_vpc.aws_vpc.vpc",
            "module.security_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af1ac3d735ca727d",
            "route_table_id": "rtb-0144dc2d9572e9acc",
            "subnet_id": "subnet-0353e6089fabb01f5"
          },
          "dependencies": [
            "module.security_vpc.aws_internet_gateway.igw",
            "module.security_vpc.aws_route_table.public",
            "module.security_vpc.aws_subnet.subnet",
            "module.security_vpc.aws_vpc.vpc",
            "module.security_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.security_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "palo_alto_mgmt_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:535928845597:security-group/sg-068d2eed5edc244dc",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-068d2eed5edc244dc",
            "ingress": [
              {
                "cidr_blocks": [
                  "70.120.129.118/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "70.120.129.118/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "70.120.129.118/32"
                ],
                "description": "",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8443
              }
            ],
            "name": "palo-alto-mgmt-sg20231017150902827900000002",
            "name_prefix": "palo-alto-mgmt-sg",
            "owner_id": "535928845597",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "palo-alto-mgmt-sg"
            },
            "tags_all": {
              "Name": "palo-alto-mgmt-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0676eb1eb96d963c0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:535928845597:subnet/subnet-025145aab2de5ae38",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.48.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025145aab2de5ae38",
            "ipv6_cidr_block": "2600:1f14:3f59:7d00::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0a2f399490c918d28",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535928845597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "security-vpc-subnet-us-west-2a-1",
              "Type": "palo_alto"
            },
            "tags_all": {
              "Name": "security-vpc-subnet-us-west-2a-1",
              "Type": "palo_alto"
            },
            "vpc_id": "vpc-0676eb1eb96d963c0"
          },
          "dependencies": [
            "module.security_vpc.aws_vpc.vpc",
            "module.security_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:535928845597:subnet/subnet-011041fe853bda575",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.48.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011041fe853bda575",
            "ipv6_cidr_block": "2600:1f14:3f59:7d01::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0d42c775b3814ffe0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535928845597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "security-vpc-subnet-us-west-2b-2",
              "Type": "palo_alto"
            },
            "tags_all": {
              "Name": "security-vpc-subnet-us-west-2b-2",
              "Type": "palo_alto"
            },
            "vpc_id": "vpc-0676eb1eb96d963c0"
          },
          "dependencies": [
            "module.security_vpc.aws_vpc.vpc",
            "module.security_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:535928845597:subnet/subnet-0353e6089fabb01f5",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.48.32/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0353e6089fabb01f5",
            "ipv6_cidr_block": "2600:1f14:3f59:7d02::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-08d7e5f2f47d7bbaa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535928845597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "security-vpc-subnet-us-west-2a-3",
              "Type": "palo_alto_gwlb"
            },
            "tags_all": {
              "Name": "security-vpc-subnet-us-west-2a-3",
              "Type": "palo_alto_gwlb"
            },
            "vpc_id": "vpc-0676eb1eb96d963c0"
          },
          "dependencies": [
            "module.security_vpc.aws_vpc.vpc",
            "module.security_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:535928845597:subnet/subnet-0f55e2220809614bf",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.48.48/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f55e2220809614bf",
            "ipv6_cidr_block": "2600:1f14:3f59:7d03::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0f4fa15f2703e2969",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535928845597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "security-vpc-subnet-us-west-2b-4",
              "Type": "palo_alto_gwlb"
            },
            "tags_all": {
              "Name": "security-vpc-subnet-us-west-2b-4",
              "Type": "palo_alto_gwlb"
            },
            "vpc_id": "vpc-0676eb1eb96d963c0"
          },
          "dependencies": [
            "module.security_vpc.aws_vpc.vpc",
            "module.security_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "4",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:535928845597:subnet/subnet-05ec38b9ba30cbda9",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.48.64/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ec38b9ba30cbda9",
            "ipv6_cidr_block": "2600:1f14:3f59:7d04::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-017bf2c3fe23a8b60",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535928845597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "security-vpc-subnet-us-west-2a-5",
              "Type": "nat_gw"
            },
            "tags_all": {
              "Name": "security-vpc-subnet-us-west-2a-5",
              "Type": "nat_gw"
            },
            "vpc_id": "vpc-0676eb1eb96d963c0"
          },
          "dependencies": [
            "module.security_vpc.aws_vpc.vpc",
            "module.security_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "5",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:535928845597:subnet/subnet-08cf4b617bd5077e1",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.48.80/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08cf4b617bd5077e1",
            "ipv6_cidr_block": "2600:1f14:3f59:7d05::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-05d3d9d77a0705acc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535928845597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "security-vpc-subnet-us-west-2b-6",
              "Type": "nat_gw"
            },
            "tags_all": {
              "Name": "security-vpc-subnet-us-west-2b-6",
              "Type": "nat_gw"
            },
            "vpc_id": "vpc-0676eb1eb96d963c0"
          },
          "dependencies": [
            "module.security_vpc.aws_vpc.vpc",
            "module.security_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "6",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:535928845597:subnet/subnet-048f698f89d48ebd5",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.48.96/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048f698f89d48ebd5",
            "ipv6_cidr_block": "2600:1f14:3f59:7d06::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-05b9733fa56fe640f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535928845597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "security-vpc-subnet-us-west-2a-7",
              "Type": "tgw"
            },
            "tags_all": {
              "Name": "security-vpc-subnet-us-west-2a-7",
              "Type": "tgw"
            },
            "vpc_id": "vpc-0676eb1eb96d963c0"
          },
          "dependencies": [
            "module.security_vpc.aws_vpc.vpc",
            "module.security_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "7",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:535928845597:subnet/subnet-077ab118678059ebe",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.48.112/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-077ab118678059ebe",
            "ipv6_cidr_block": "2600:1f14:3f59:7d07::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-05a52fb2bd902ddc0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535928845597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "security-vpc-subnet-us-west-2b-8",
              "Type": "tgw"
            },
            "tags_all": {
              "Name": "security-vpc-subnet-us-west-2b-8",
              "Type": "tgw"
            },
            "vpc_id": "vpc-0676eb1eb96d963c0"
          },
          "dependencies": [
            "module.security_vpc.aws_vpc.vpc",
            "module.security_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.security_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:535928845597:vpc/vpc-0676eb1eb96d963c0",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.1.48.0/20",
            "default_network_acl_id": "acl-0c916d3cbcde13043",
            "default_route_table_id": "rtb-0f5baf3b675720a22",
            "default_security_group_id": "sg-0aec04deccca50d8d",
            "dhcp_options_id": "dopt-092c0db2f4a875792",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0676eb1eb96d963c0",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-02a21475ac340579b",
            "ipv6_cidr_block": "2600:1f14:3f59:7d00::/56",
            "ipv6_cidr_block_network_border_group": "us-west-2",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f5baf3b675720a22",
            "owner_id": "535928845597",
            "tags": {
              "Name": "security-vpc"
            },
            "tags_all": {
              "Name": "security-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpcs[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "subnet_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04ed09a7502b8c621",
            "arn": "arn:aws:ec2:us-west-2:535928845597:instance/i-0fc24cef5d2e44572",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fc24cef5d2e44572",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.nano",
            "ipv6_address_count": 1,
            "ipv6_addresses": [
              "2600:1f14:2d16:6f00:1df8:741:b42:cd70"
            ],
            "key_name": "my_ssh_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e5ac02aea91a873c",
            "private_dns": "ip-10-1-0-11.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.0.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e3dcd5009196bf35",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07dfe736a5673f0d7",
            "tags": {
              "Instance_Num": "0",
              "Name": "vpc-0-vpc-subnet-subnet-07dfe736a5673f0d7-instance-0",
              "Subnet_ID": "subnet-07dfe736a5673f0d7",
              "VPC": "vpc-0"
            },
            "tags_all": {
              "Instance_Num": "0",
              "Name": "vpc-0-vpc-subnet-subnet-07dfe736a5673f0d7-instance-0",
              "Subnet_ID": "subnet-07dfe736a5673f0d7",
              "VPC": "vpc-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08cb6920152929c71"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh_key",
            "module.vpcs.aws_security_group.ssh_sg",
            "module.vpcs.aws_subnet.subnet",
            "module.vpcs.aws_vpc.vpc",
            "module.vpcs.data.aws_ami.amazon_linux",
            "module.vpcs.data.aws_availability_zones.available",
            "tls_private_key.ssh_key"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04ed09a7502b8c621",
            "arn": "arn:aws:ec2:us-west-2:535928845597:instance/i-0f9ec5add596f2b5a",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f9ec5add596f2b5a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.nano",
            "ipv6_address_count": 1,
            "ipv6_addresses": [
              "2600:1f14:2d16:6f01:3b62:27a1:fc43:c503"
            ],
            "key_name": "my_ssh_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d57318fed46ef4bb",
            "private_dns": "ip-10-1-0-24.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.0.24",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03b7da51608600cbb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0392b33e9dbb475df",
            "tags": {
              "Instance_Num": "1",
              "Name": "vpc-0-vpc-subnet-subnet-0392b33e9dbb475df-instance-1",
              "Subnet_ID": "subnet-0392b33e9dbb475df",
              "VPC": "vpc-0"
            },
            "tags_all": {
              "Instance_Num": "1",
              "Name": "vpc-0-vpc-subnet-subnet-0392b33e9dbb475df-instance-1",
              "Subnet_ID": "subnet-0392b33e9dbb475df",
              "VPC": "vpc-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08cb6920152929c71"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh_key",
            "module.vpcs.aws_security_group.ssh_sg",
            "module.vpcs.aws_subnet.subnet",
            "module.vpcs.aws_vpc.vpc",
            "module.vpcs.data.aws_ami.amazon_linux",
            "module.vpcs.data.aws_availability_zones.available",
            "tls_private_key.ssh_key"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04ed09a7502b8c621",
            "arn": "arn:aws:ec2:us-west-2:535928845597:instance/i-01a154a3f747c08ae",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01a154a3f747c08ae",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.nano",
            "ipv6_address_count": 1,
            "ipv6_addresses": [
              "2600:1f14:2d16:6f02:bf2e:2a54:c4d8:1a44"
            ],
            "key_name": "my_ssh_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-055893e9384a3cdb4",
            "private_dns": "ip-10-1-0-36.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.0.36",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0190616780cbe4ed0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b8bc86a725ca42e0",
            "tags": {
              "Instance_Num": "2",
              "Name": "vpc-0-vpc-subnet-subnet-0b8bc86a725ca42e0-instance-2",
              "Subnet_ID": "subnet-0b8bc86a725ca42e0",
              "VPC": "vpc-0"
            },
            "tags_all": {
              "Instance_Num": "2",
              "Name": "vpc-0-vpc-subnet-subnet-0b8bc86a725ca42e0-instance-2",
              "Subnet_ID": "subnet-0b8bc86a725ca42e0",
              "VPC": "vpc-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08cb6920152929c71"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh_key",
            "module.vpcs.aws_security_group.ssh_sg",
            "module.vpcs.aws_subnet.subnet",
            "module.vpcs.aws_vpc.vpc",
            "module.vpcs.data.aws_ami.amazon_linux",
            "module.vpcs.data.aws_availability_zones.available",
            "tls_private_key.ssh_key"
          ]
        },
        {
          "index_key": "3",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04ed09a7502b8c621",
            "arn": "arn:aws:ec2:us-west-2:535928845597:instance/i-0bc36ad70c2265b7f",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bc36ad70c2265b7f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.nano",
            "ipv6_address_count": 1,
            "ipv6_addresses": [
              "2600:1f14:2d16:6f03:a004:80b5:4ee7:6f44"
            ],
            "key_name": "my_ssh_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07ca4ddfb77258451",
            "private_dns": "ip-10-1-0-52.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.0.52",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f181800967abfd85",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04403c190b2ba2f11",
            "tags": {
              "Instance_Num": "3",
              "Name": "vpc-0-vpc-subnet-subnet-04403c190b2ba2f11-instance-3",
              "Subnet_ID": "subnet-04403c190b2ba2f11",
              "VPC": "vpc-0"
            },
            "tags_all": {
              "Instance_Num": "3",
              "Name": "vpc-0-vpc-subnet-subnet-04403c190b2ba2f11-instance-3",
              "Subnet_ID": "subnet-04403c190b2ba2f11",
              "VPC": "vpc-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08cb6920152929c71"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh_key",
            "module.vpcs.aws_security_group.ssh_sg",
            "module.vpcs.aws_subnet.subnet",
            "module.vpcs.aws_vpc.vpc",
            "module.vpcs.data.aws_ami.amazon_linux",
            "module.vpcs.data.aws_availability_zones.available",
            "tls_private_key.ssh_key"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:535928845597:security-group/sg-08cb6920152929c71",
            "description": "Allow SSH inbound traffic",
            "egress": [],
            "id": "sg-08cb6920152929c71",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vpc-0-ssh-sg",
            "name_prefix": "",
            "owner_id": "535928845597",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08d62d56c5f3ec630"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcs.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:535928845597:subnet/subnet-07dfe736a5673f0d7",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07dfe736a5673f0d7",
            "ipv6_cidr_block": "2600:1f14:2d16:6f00::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0b75ceacc9993495b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535928845597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-0-subnet-us-west-2a-1"
            },
            "tags_all": {
              "Name": "vpc-0-subnet-us-west-2a-1"
            },
            "vpc_id": "vpc-08d62d56c5f3ec630"
          },
          "dependencies": [
            "module.vpcs.aws_vpc.vpc",
            "module.vpcs.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:535928845597:subnet/subnet-0392b33e9dbb475df",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.0.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0392b33e9dbb475df",
            "ipv6_cidr_block": "2600:1f14:2d16:6f01::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-07a824025782c30b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535928845597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-0-subnet-us-west-2b-2"
            },
            "tags_all": {
              "Name": "vpc-0-subnet-us-west-2b-2"
            },
            "vpc_id": "vpc-08d62d56c5f3ec630"
          },
          "dependencies": [
            "module.vpcs.aws_vpc.vpc",
            "module.vpcs.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:535928845597:subnet/subnet-0b8bc86a725ca42e0",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.0.32/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8bc86a725ca42e0",
            "ipv6_cidr_block": "2600:1f14:2d16:6f02::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0e023470adaf56e51",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535928845597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-0-subnet-us-west-2a-3"
            },
            "tags_all": {
              "Name": "vpc-0-subnet-us-west-2a-3"
            },
            "vpc_id": "vpc-08d62d56c5f3ec630"
          },
          "dependencies": [
            "module.vpcs.aws_vpc.vpc",
            "module.vpcs.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:535928845597:subnet/subnet-04403c190b2ba2f11",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.0.48/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04403c190b2ba2f11",
            "ipv6_cidr_block": "2600:1f14:2d16:6f03::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0c4091b019cabf9df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535928845597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-0-subnet-us-west-2b-4"
            },
            "tags_all": {
              "Name": "vpc-0-subnet-us-west-2b-4"
            },
            "vpc_id": "vpc-08d62d56c5f3ec630"
          },
          "dependencies": [
            "module.vpcs.aws_vpc.vpc",
            "module.vpcs.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "4",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:535928845597:subnet/subnet-072d58ff3f27c0ea7",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.0.64/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-072d58ff3f27c0ea7",
            "ipv6_cidr_block": "2600:1f14:2d16:6f04::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-00698d190c6fcccfe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535928845597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-0-subnet-us-west-2a-5"
            },
            "tags_all": {
              "Name": "vpc-0-subnet-us-west-2a-5"
            },
            "vpc_id": "vpc-08d62d56c5f3ec630"
          },
          "dependencies": [
            "module.vpcs.aws_vpc.vpc",
            "module.vpcs.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "5",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:535928845597:subnet/subnet-0c6359c5406ec09b6",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.0.80/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6359c5406ec09b6",
            "ipv6_cidr_block": "2600:1f14:2d16:6f05::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-09c15fb769be216c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535928845597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-0-subnet-us-west-2b-6"
            },
            "tags_all": {
              "Name": "vpc-0-subnet-us-west-2b-6"
            },
            "vpc_id": "vpc-08d62d56c5f3ec630"
          },
          "dependencies": [
            "module.vpcs.aws_vpc.vpc",
            "module.vpcs.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs[0]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:535928845597:vpc/vpc-08d62d56c5f3ec630",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.1.0.0/20",
            "default_network_acl_id": "acl-0367b266042980882",
            "default_route_table_id": "rtb-0a759fa451717282a",
            "default_security_group_id": "sg-0aa4793dc49811010",
            "dhcp_options_id": "dopt-092c0db2f4a875792",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08d62d56c5f3ec630",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0d5c96a1b34b6a884",
            "ipv6_cidr_block": "2600:1f14:2d16:6f00::/56",
            "ipv6_cidr_block_network_border_group": "us-west-2",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a759fa451717282a",
            "owner_id": "535928845597",
            "tags": {
              "Name": "vpc-0"
            },
            "tags_all": {
              "Name": "vpc-0"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpcs[1]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "subnet_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04ed09a7502b8c621",
            "arn": "arn:aws:ec2:us-west-2:535928845597:instance/i-07407855725f93035",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07407855725f93035",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.nano",
            "ipv6_address_count": 1,
            "ipv6_addresses": [
              "2600:1f14:2252:e500:f711:39d:5b8d:905e"
            ],
            "key_name": "my_ssh_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01c62f3dff5601585",
            "private_dns": "ip-10-1-16-4.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.16.4",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dc40b438ec769a55",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b926f210aa56d29a",
            "tags": {
              "Instance_Num": "0",
              "Name": "vpc-1-vpc-subnet-subnet-0b926f210aa56d29a-instance-0",
              "Subnet_ID": "subnet-0b926f210aa56d29a",
              "VPC": "vpc-1"
            },
            "tags_all": {
              "Instance_Num": "0",
              "Name": "vpc-1-vpc-subnet-subnet-0b926f210aa56d29a-instance-0",
              "Subnet_ID": "subnet-0b926f210aa56d29a",
              "VPC": "vpc-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06bb89a3e8dac98c0"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh_key",
            "module.vpcs.aws_security_group.ssh_sg",
            "module.vpcs.aws_subnet.subnet",
            "module.vpcs.aws_vpc.vpc",
            "module.vpcs.data.aws_ami.amazon_linux",
            "module.vpcs.data.aws_availability_zones.available",
            "tls_private_key.ssh_key"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04ed09a7502b8c621",
            "arn": "arn:aws:ec2:us-west-2:535928845597:instance/i-0087d6aec4a503791",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0087d6aec4a503791",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.nano",
            "ipv6_address_count": 1,
            "ipv6_addresses": [
              "2600:1f14:2252:e501:4f4e:b116:e5f9:f9e"
            ],
            "key_name": "my_ssh_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03058a767d1448c0c",
            "private_dns": "ip-10-1-16-22.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.16.22",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0032d4ba47123be58",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04169971cf61430b0",
            "tags": {
              "Instance_Num": "1",
              "Name": "vpc-1-vpc-subnet-subnet-04169971cf61430b0-instance-1",
              "Subnet_ID": "subnet-04169971cf61430b0",
              "VPC": "vpc-1"
            },
            "tags_all": {
              "Instance_Num": "1",
              "Name": "vpc-1-vpc-subnet-subnet-04169971cf61430b0-instance-1",
              "Subnet_ID": "subnet-04169971cf61430b0",
              "VPC": "vpc-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06bb89a3e8dac98c0"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh_key",
            "module.vpcs.aws_security_group.ssh_sg",
            "module.vpcs.aws_subnet.subnet",
            "module.vpcs.aws_vpc.vpc",
            "module.vpcs.data.aws_ami.amazon_linux",
            "module.vpcs.data.aws_availability_zones.available",
            "tls_private_key.ssh_key"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04ed09a7502b8c621",
            "arn": "arn:aws:ec2:us-west-2:535928845597:instance/i-066b9811668e6291c",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-066b9811668e6291c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.nano",
            "ipv6_address_count": 1,
            "ipv6_addresses": [
              "2600:1f14:2252:e502:eec5:d1cb:f51e:9053"
            ],
            "key_name": "my_ssh_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d0fe6ea9cd8f17de",
            "private_dns": "ip-10-1-16-41.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.16.41",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e40c224026c1c198",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-075bfd72dbf8a7e59",
            "tags": {
              "Instance_Num": "2",
              "Name": "vpc-1-vpc-subnet-subnet-075bfd72dbf8a7e59-instance-2",
              "Subnet_ID": "subnet-075bfd72dbf8a7e59",
              "VPC": "vpc-1"
            },
            "tags_all": {
              "Instance_Num": "2",
              "Name": "vpc-1-vpc-subnet-subnet-075bfd72dbf8a7e59-instance-2",
              "Subnet_ID": "subnet-075bfd72dbf8a7e59",
              "VPC": "vpc-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06bb89a3e8dac98c0"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh_key",
            "module.vpcs.aws_security_group.ssh_sg",
            "module.vpcs.aws_subnet.subnet",
            "module.vpcs.aws_vpc.vpc",
            "module.vpcs.data.aws_ami.amazon_linux",
            "module.vpcs.data.aws_availability_zones.available",
            "tls_private_key.ssh_key"
          ]
        },
        {
          "index_key": "3",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04ed09a7502b8c621",
            "arn": "arn:aws:ec2:us-west-2:535928845597:instance/i-096843452caa80071",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-096843452caa80071",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.nano",
            "ipv6_address_count": 1,
            "ipv6_addresses": [
              "2600:1f14:2252:e503:598a:a72f:d758:fc9c"
            ],
            "key_name": "my_ssh_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-007973a2e7f51da47",
            "private_dns": "ip-10-1-16-62.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.16.62",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d68da347bdd4bed6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08937199802fbb874",
            "tags": {
              "Instance_Num": "3",
              "Name": "vpc-1-vpc-subnet-subnet-08937199802fbb874-instance-3",
              "Subnet_ID": "subnet-08937199802fbb874",
              "VPC": "vpc-1"
            },
            "tags_all": {
              "Instance_Num": "3",
              "Name": "vpc-1-vpc-subnet-subnet-08937199802fbb874-instance-3",
              "Subnet_ID": "subnet-08937199802fbb874",
              "VPC": "vpc-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06bb89a3e8dac98c0"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh_key",
            "module.vpcs.aws_security_group.ssh_sg",
            "module.vpcs.aws_subnet.subnet",
            "module.vpcs.aws_vpc.vpc",
            "module.vpcs.data.aws_ami.amazon_linux",
            "module.vpcs.data.aws_availability_zones.available",
            "tls_private_key.ssh_key"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs[1]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:535928845597:security-group/sg-06bb89a3e8dac98c0",
            "description": "Allow SSH inbound traffic",
            "egress": [],
            "id": "sg-06bb89a3e8dac98c0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vpc-1-ssh-sg",
            "name_prefix": "",
            "owner_id": "535928845597",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03d6b7559ed48988a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcs.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs[1]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:535928845597:subnet/subnet-0b926f210aa56d29a",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.16.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b926f210aa56d29a",
            "ipv6_cidr_block": "2600:1f14:2252:e500::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-077086bc9791b5f71",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535928845597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-1-subnet-us-west-2a-1"
            },
            "tags_all": {
              "Name": "vpc-1-subnet-us-west-2a-1"
            },
            "vpc_id": "vpc-03d6b7559ed48988a"
          },
          "dependencies": [
            "module.vpcs.aws_vpc.vpc",
            "module.vpcs.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:535928845597:subnet/subnet-04169971cf61430b0",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.16.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04169971cf61430b0",
            "ipv6_cidr_block": "2600:1f14:2252:e501::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-01b420292ab1fde28",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535928845597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-1-subnet-us-west-2b-2"
            },
            "tags_all": {
              "Name": "vpc-1-subnet-us-west-2b-2"
            },
            "vpc_id": "vpc-03d6b7559ed48988a"
          },
          "dependencies": [
            "module.vpcs.aws_vpc.vpc",
            "module.vpcs.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:535928845597:subnet/subnet-075bfd72dbf8a7e59",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.16.32/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075bfd72dbf8a7e59",
            "ipv6_cidr_block": "2600:1f14:2252:e502::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0f7f8bf96f1361100",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535928845597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-1-subnet-us-west-2a-3"
            },
            "tags_all": {
              "Name": "vpc-1-subnet-us-west-2a-3"
            },
            "vpc_id": "vpc-03d6b7559ed48988a"
          },
          "dependencies": [
            "module.vpcs.aws_vpc.vpc",
            "module.vpcs.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:535928845597:subnet/subnet-08937199802fbb874",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.16.48/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08937199802fbb874",
            "ipv6_cidr_block": "2600:1f14:2252:e503::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0092185a7ababcea0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535928845597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-1-subnet-us-west-2b-4"
            },
            "tags_all": {
              "Name": "vpc-1-subnet-us-west-2b-4"
            },
            "vpc_id": "vpc-03d6b7559ed48988a"
          },
          "dependencies": [
            "module.vpcs.aws_vpc.vpc",
            "module.vpcs.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "4",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:535928845597:subnet/subnet-005530fb58c39213a",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.16.64/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005530fb58c39213a",
            "ipv6_cidr_block": "2600:1f14:2252:e504::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-04977f0dde71453cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535928845597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-1-subnet-us-west-2a-5"
            },
            "tags_all": {
              "Name": "vpc-1-subnet-us-west-2a-5"
            },
            "vpc_id": "vpc-03d6b7559ed48988a"
          },
          "dependencies": [
            "module.vpcs.aws_vpc.vpc",
            "module.vpcs.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "5",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:535928845597:subnet/subnet-0738b442180d279af",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.16.80/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0738b442180d279af",
            "ipv6_cidr_block": "2600:1f14:2252:e505::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-07dd082fc29be04bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535928845597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-1-subnet-us-west-2b-6"
            },
            "tags_all": {
              "Name": "vpc-1-subnet-us-west-2b-6"
            },
            "vpc_id": "vpc-03d6b7559ed48988a"
          },
          "dependencies": [
            "module.vpcs.aws_vpc.vpc",
            "module.vpcs.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpcs[1]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:535928845597:vpc/vpc-03d6b7559ed48988a",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.1.16.0/20",
            "default_network_acl_id": "acl-073a79a30abeb0df4",
            "default_route_table_id": "rtb-0b73523d1dd858660",
            "default_security_group_id": "sg-0043b2fccc616fff3",
            "dhcp_options_id": "dopt-092c0db2f4a875792",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03d6b7559ed48988a",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-08427e6c98769bb8e",
            "ipv6_cidr_block": "2600:1f14:2252:e500::/56",
            "ipv6_cidr_block_network_border_group": "us-west-2",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b73523d1dd858660",
            "owner_id": "535928845597",
            "tags": {
              "Name": "vpc-1"
            },
            "tags_all": {
              "Name": "vpc-1"
            }
          }
        }
      ]
    }
  ]
}